--- a/src/particles.tex
+++ b/src/particles.tex
@@ -277,7 +277,7 @@ function moveParticles(idx) {
         }
     }
 
-    % Adjust the rect position of the inputfield
+    % Adjust the rect position of the TextField
     var rect = [
         particles[idx][1][0] - PARTICLE_SIZE_H - add_x + shift_x,
         particles[idx][1][1] + PARTICLE_SIZE_H + add_y,
