--- a/src/memory.tex
+++ b/src/memory.tex
@@ -37,10 +37,10 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{Memory}
 
-const GAME_DESC = "In this game multiple player compete to get the most pair.\
+const GAME_DESC = "In this game multiple player compete to collect the most pairs.\
 Each pair contains two cards with the same symbol on it. At the beginning all\
 cards are hidden and each player can reveal two of them when it is their turn.\
-After the reveal both are hidden again if they do not math or they are remove if they do.\
+After the reveal both are hidden again if they do not match or they are removed if they do.\
 In that case the reveiling player gets another turn.";
 
 % Outside variables
