--- a/src/minesweeper.tex
+++ b/src/minesweeper.tex
@@ -5,8 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[utf8x]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -41,8 +39,9 @@ These mines are distributed randomly. Everytime a field is revealed it shows a c
 of how many mines are in the neighbourhood allowing for logicall deduction where\
 a mine can be.";
 
-var FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-var FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+% Outside variables
+const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
+const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 
 % Constants
 const MINE = -1;
@@ -63,7 +62,8 @@ var fieldsToReveal = FIELD_WIDTH * FIELD_HEIGHT;
 var revealed = 0;
 var mines = 0;
 
-var colors = new Array(
+% Color data
+const COLORS = new Array(
     color.white, % Mine
     [ "RGB", 0.0, 0.0, 0.0 ], % Empty
     [ "RGB", 0.0, 0.0, 1.0 ], % 1
@@ -79,6 +79,10 @@ var colors = new Array(
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
+/**
+ * Returns a random number between 0 and the param.
+ * @param {Number} max The upperbound
+ */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -86,6 +90,9 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Initialise the default game state.
+ */
 function initialise() {
     % Fill the array with the default content and infos
     for (var row = 0; row < FIELD_HEIGHT; row++) {
@@ -191,12 +198,19 @@ function tooltip(on) {
 %%%%%%%%%%%%%%%%%%%%
 % Fill and restart %
 %%%%%%%%%%%%%%%%%%%%
+/**
+ * Calculates the amount of expected mines using the gui and
+ * distributes them to the field.
+ * Afterwards iterate all non mined fields and check the neighbourhood
+ * to get the mine amount.
+ */
 function fillMines() {
     % Get the amount of mines using the gui-percentage
     mines = (FIELD_WIDTH * FIELD_HEIGHT) / 100 * this.getField("percentage").value;
     % Reduce the count of fields to reveal
     fieldsToReveal -= mines;
     % Distribute the mines onto the field
+    % OBACHT: In this loop a mine might be placed at an already taken position.
     var x = 0;
     var y = 0;
     for (var i = 0; i < mines; i++) {
@@ -321,7 +335,7 @@ function reveal(x, y) {
             var elem = stack.pop();
             for (var xx = elem[0] - 1; xx <= elem[0] + 1; xx++) {
                 for (var yy = elem[1] - 1; yy <= elem[1] + 1; yy++) {
-                    % Ignore out of bounds, came field and already visible
+                    % Ignore out of bounds, same field and already visible
                     if (xx < 0 || yy < 0 || xx >= FIELD_WIDTH || yy >= FIELD_HEIGHT ||
                         (xx == elem[0] && yy == elem[1]) || complField[yy][xx][0] == VISIBLE) {
                         continue;
@@ -354,9 +368,9 @@ function reveal(x, y) {
     draw(x, y);
 }
 
-%%%%%%%%
-% Draw %
-%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
 /**
  * Draws the complete field.
  */
@@ -385,11 +399,11 @@ function draw(x, y) {
         if (val == MINE) {
             field.fillColor = color.black;
             field.borderColor = color.black;
-            field.textColor = colors[val + 1];
+            field.textColor = COLORS[val + 1];
             field.value = "M";
         } else if (val != EMPTY) {
             field.value = val;
-            field.textColor = colors[val + 1];
+            field.textColor = COLORS[val + 1];
         } else {
             field.fillColor = color.transparent;
             field.borderColor = color.transparent;
@@ -429,17 +443,18 @@ function printInfoText(text) {
 
     \begin{Form}
 
+        % Header
         \begin{multicols}{2}
+            % Title
             \section*{Minesweeper}
         \columnbreak
+            % Tooltip object
             \begin{flushright}%
-            \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
-            \PushButton[name=tooltipbtn, bordercolor=white]{%
-                \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                    \centering
-                    ?\strut
-                \end{tcolorbox}%
-            }
+                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                        \centering?\strut{}
+                    \end{tcolorbox}%
+                }
             \end{flushright}%
         \end{multicols}
 
@@ -457,6 +472,7 @@ function printInfoText(text) {
             \def\blocksize{\blocksizeH}
         \fi
 
+        % The gamefield
         \begin{tcolorbox}
             \begin{flushright}
                 \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
@@ -470,6 +486,7 @@ function printInfoText(text) {
             \end{flushright}%
         \end{tcolorbox}
 
+        % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
                 \PushButton[name=reveal, bordercolor=white]{
@@ -501,5 +518,9 @@ function printInfoText(text) {
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
+
+        \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
+
     \end{Form}
+
 \end{document}
