--- a/src/particles.tex
+++ b/src/particles.tex
@@ -5,8 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage[utf8x]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -35,7 +33,14 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{TicTacToe}
 
+const GAME_DESC = "In this application you can see a small particle system.\
+Via the gui it is possible to choose one of the available.";
+
+% Outside variables
 const PARTICLE_COUNT = AFMakeNumber(\particleCount);
+
+% Constants
+% Spawn dimensions
 const UPPER_LIMIT = 842;
 const LOWER_LIMIT = 0;
 const LEFT_LIMIT = 0;
@@ -44,46 +49,47 @@ const PARTICLE_SIZE = 10;
 const PARTICLE_SIZE_H = PARTICLE_SIZE / 2;
 % The amount of space that a particle moves each frame
 const STEP_SIZE = 4;
+const DEAD = false;
+const ALIVE = true;
 
+% Globals
+% Animation interval variable
 var run;
+% Particle array
 var particles = new Array();
 var particleType = 0;
 
-var probability = [
+% Probabilities for emits
+const PROBABILITY = [
     98,
     50
 ]
 
-var snowSymbols = [
+% Particle arrays
+const SNOW_SYMBOLS = [
     0x2744,
     0x2745,
     0x2746,
     0x2749
 ]
 
-var flowerSymbols = [
+const FLOWER_SYMBOLS = [
     0x2740
 ];
 
-var circleSymbols = [
+const CIRCLE_SYMBOLS = [
     0x25CF,
     0x25CB,
     0x25CC
 ];
 
-var colors = new Array(
-    [ "RGB", 0.843, 0.078, 0.058 ],
-    [ "RGB", 0.203, 0.603, 0.054 ],
-    [ "RGB", 0.078, 0.305, 0.560 ],
-    [ "RGB", 0.560, 0.078, 0.533 ],
-    color.black
-);
-
-highlightcolor = [ "RGB", 0.984, 0.800, 0.176 ];
-
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
+/**
+ * Returns a random number between 0 and the param.
+ * @param {Number} max The upperbound
+ */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -91,10 +97,14 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Initialise the default particle state.
+ */
 function initialise() {
     % Initialise all particles as dead
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        particles.push([false, [0, 0], 0]);
+        % Lifestate, position, symbolindex
+        particles.push([DEAD, [0, 0], 0]);
 
         field = this.getField("particle" + idx);
         field.delay = true;
@@ -105,63 +115,41 @@ function initialise() {
         field.delay = false;
     }
 
+    % Init the GUI
     initialiseButtons();
 
+    % Start the animation interval
     run = app.setInterval("runAll()", 100);
 }
 
+/**
+ * Initialise all buttons from the GUI.
+ * For example add callbacks.
+ */
 function initialiseButtons() {
+    % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
-
-    % field.textColor = colors[value - 1];
-    % field.value = String.fromCharCode(playerSymbols[value - 1]);
-    % field.borderColor = color.white;
-    % field.setAction("MouseDown", callbackName);
-    % field.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-    % field.alignment = "center";
-    % Rotation does work but only for 90, 180 and 270
-    % field.rotation = 90;
 
     this.getField("particleType").borderColor = color.white;
     this.getField("particleType").currentValueIndices = 0;
     this.getField("particleType").commitOnSelChange = true;
 
+    % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
 }
 
-function tooltip(on) {
-    if (on) {
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.alignment = "center";
-        field.value = "This is a particle system.";
-
-        field.fillColor = color.gray;
-        % hight 842, width 596
-        % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [128, 601, 468, 401];
-
-        field.delay = false;
-    } else {
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = "";
-
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
-        field.delay = false;
-    }
-}
-
+/**
+ * Restart the particle system and the interval.
+ */
 function restart() {
     app.clearInterval(run);
 
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        particles[idx] = [false, [0, 0], 0];
+        % Lifestate, position, symbolindex
+        particles[idx] = [DEAD, [0, 0], 0];
 
         field = this.getField("particle" + idx);
         field.delay = true;
@@ -176,15 +164,53 @@ function restart() {
     run = app.setInterval("runAll()", 100);
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Enable or disable the tooltip
+ *
+ * @param {Boolean} on Enable or disable tooltip
+ */
+function tooltip(on) {
+    if (on) {
+        % Move the tooltip field to the center of the screen
+        % and adjust the size so the text can be displayed
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.value = GAME_DESC;
+
+        field.multiline = true;
+        field.textSize = 16;
+        field.fillColor = color.gray;
+        % hight 842, width 596
+        % upper-left x, upper-left y, lower-right x and lower-right y
+        field.rect = [128, 601, 468, 401];
+
+        field.delay = false;
+    } else {
+        % Remove the field such that it is not visible
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.value = "";
+
+        field.multiline = false;
+        field.fillColor = color.gray;
+        field.rect = [0, 0, 0, 0];
+
+        field.delay = false;
+    }
+}
+
+%%%%%%%%%%%%%%%%
+% Drawing loop %
+%%%%%%%%%%%%%%%%
+/**
+ * Main loop used to emit new particles or move the current ones.
+ */
 function runAll() {
     particleType = this.getField("particleType").currentValueIndices;
 
     % Emit new particle if particle dead and random condition
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        if (particles[idx][0] === false && getRandomInt(100) > probability[particleType]) {
+        if (particles[idx][0] === false && getRandomInt(100) > PROBABILITY[particleType]) {
             emitParticle(idx);
         } else {
             moveParticles(idx);
@@ -193,20 +219,33 @@ function runAll() {
 
 }
 
+/**
+ * Emits a new particle for the given index.
+ * Dependent on the selected particle system.
+ *
+ * @param {Number} idx The index of the particle in the array.
+ */
 function emitParticle(idx) {
     if (particleType == 0) {
         var pos = getRandomInt(RIGHT_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
-        var symb = snowSymbols[getRandomInt(snowSymbols.length)];
-
-        particles[idx] = [true, [pos, UPPER_LIMIT - PARTICLE_SIZE_H], symb];
+        % Select a random snow symbol
+        var symb = SNOW_SYMBOLS[getRandomInt(SNOW_SYMBOLS.length)];
+        % Lifestate, position, symbol
+        particles[idx] = [ALIVE, [pos, UPPER_LIMIT - PARTICLE_SIZE_H], symb];
     } else {
         var pos_x = getRandomInt(RIGHT_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
         var pos_y = getRandomInt(UPPER_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
-
-        particles[idx] = [true, [pos_x, pos_y], 0];
+        % Lifestate, position, symbolindex
+        particles[idx] = [ALIVE, [pos_x, pos_y], 0];
     }
 }
 
+/**
+ * Move the particle with the given index.
+ * Dependent on the selected particle system.
+ *
+ * @param {Number} idx The index of the particle in the array.
+ */
 function moveParticles(idx) {
     var shift_x = 0;
     var add_x = 0;
@@ -217,24 +256,28 @@ function moveParticles(idx) {
     if (particleType == 0) {
         field.value = String.fromCharCode(particles[idx][2]);
         field.textSize = PARTICLE_SIZE;
+        % Apply shifting motion like waves
         shift_x = Math.cos((particles[idx][1][0] + particles[idx][1][1]) / 40.0) * 20;
 
         particles[idx][1][1] -= STEP_SIZE;
+        % Ending lifecycle when out of render area
         if (particles[idx][1][1] < LOWER_LIMIT) {
-            particles[idx][0] = false;
+            particles[idx][0] = DEAD;
         }
     } else {
-        field.value = String.fromCharCode(circleSymbols[Math.floor(particles[idx][2] / 3)]);
+        field.value = String.fromCharCode(CIRCLE_SYMBOLS[Math.floor(particles[idx][2] / 3)]);
         field.textSize = PARTICLE_SIZE + particles[idx][2] * 2;
 
         particles[idx][2]++;
         add_x = particles[idx][2];
         add_y = particles[idx][2];
-        if (particles[idx][2] >= circleSymbols.length * 3) {
-            particles[idx][0] = false;
+        % Ending lifecycle when all symbols iterated
+        if (particles[idx][2] >= CIRCLE_SYMBOLS.length * 3) {
+            particles[idx][0] = DEAD;
         }
     }
 
+    % Adjust the rect position of the TextField
     var rect = [
         particles[idx][1][0] - PARTICLE_SIZE_H - add_x + shift_x,
         particles[idx][1][1] + PARTICLE_SIZE_H + add_y,
@@ -255,31 +298,36 @@ function moveParticles(idx) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-    \begin{multicols}{2}
-        \section*{Particles}
-    \columnbreak
-        \begin{flushright}%
-        \PushButton[name=tooltipbtn, bordercolor=white]{%
-            \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                \centering
-                ?\strut
-            \end{tcolorbox}%
-        }
-        \end{flushright}%
-    \end{multicols}
-
-    \vspace*{\fill}
-
     \begin{Form}
 
+        % Header
+        \begin{multicols}{2}
+            % Title
+            \section*{Particles}
+        \columnbreak
+            % Tooltip object
+            \begin{flushright}%
+                \PushButton[name=tooltipbtn, bordercolor=white]{%
+                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                        \centering?\strut{}
+                    \end{tcolorbox}%
+                }
+            \end{flushright}%
+        \end{multicols}
+
+        % Fill the page such that the remaining elements get pushed to the bottom
+        \vspace*{\fill}
+
+        % The fields for the particle system
         \xintFor* #1 in {\xintSeq{0}{\particleCount-1}} \do {%
             \TextField[bordercolor=white, name=particle#1, readonly=true]{}%
         }
 
         \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}%
 
+        % Game related buttons
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} X X @{}}%
+            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
